@@ -7,6 +7,7 @@ MANIFEST.SKIP
 README.md
 scripts/generate_index.pl
 t/30-basics.t
+t/conf/abbreviate.yml
 t/eof.t
 t/eol.t
 t/fuzz.t
