@@ -43,7 +43,6 @@
 \.tmp$
 \.#
 \.rej$
-\.yml$
 \.swp$
 
 # Avoid OS-specific files/dirs
